--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .jumbotron {
   padding: 2rem 1rem;
-  background-image: url(Assets/gambar1.png);
+  background-image: url(assets/gambar1.png);
   background-size: cover;
   color: whitesmoke;
   padding: 100px;
